--- a/index.html
+++ b/index.html
@@ -3,7 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My New Website</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <li>Github</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </nav>
+    </header>
+
+    <section class="website">
+      <h1>My New Website</h1>
+      <img src="./assets/image-1.png" alt="coming soon" id="img" />
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </section>
+
+    <section class="contact">
+      <h3>Contact Me</h3>
+      <form id="box">
+        <label for="fname">Name:</label>
+        <input type="text" id="fname" name="fname" /><br />
+        <label for="lname">Email:</label>
+        <input type="text" id="lname" name="lname" /><br /><br />
+        <input type="submit" value="Submit" />
+      </form>
+    </section>
+
+    <footer>
+      <p>© 2024 My New Website Productions</p>
+    </footer>
+  </body>
 </html>
